# gazebo_sensor_collection

./: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.ros1  README.txt  cameras_test.rviz  colcon.pkg  lidars_test.rviz  package.xml  package.xml.ros1  sensor_database.xml
cfg/: SimulatedCameraD4XX.cfg
config/gps/: custom_gps_behavior.geofence  plots.xacro
include/: ros_debug.h  sensor_includes.h
include/gazebo_sensor_collection/: battery_config.h  gnss_config.h  sensor_model.h  update_timer.h
include/gazebo_sensor_collection/gps/: gazebo_ros_gps_mod_hec.h  gazebo_ros_gps_with_dropout.h
include/gazebo_sensor_collection/misc/: gazebo_ros_battery_simple.h
include/gazebo_sensor_collection/motion/: gazebo_ros_imu_mod_hec.h  skid_steering_with_encoder.h
include/gazebo_sensor_collection/vision/: gazebo_ros_realsense.h
include/gps/: gazebo_ros_gps_with_dropout.h  terra_ros_gps_simple.h  terra_ros_gps_with_dropout.h
include/misc/: ros_debug.h  terra_sim_battery.h
include/motion/: gazebo_encoder.h  gazebo_ros_imu_mod.h  skid_steering_with_encoder.h  terra_encoder.h  terra_ros_imu.h  terra_skid_steering_with_encoder.h
include/vision/: gazebo_ros_realsense.h
launch/: gazebo_sim.launch.py  gazebo_sim.launch.py.orig  launch_sensor_test_world.launch  launch_sensor_test_world.launch.xml  sensor_sim_test.launch.py  test.launch.py  test_gazebo.launch.xml
launch/include/: custom_sensors_attachments.urdf.xacro  sensors_attachments.urdf.xacro
meshes/: rotary_encoder.dae
meshes/cameras/intel/: realsense_r200.dae
meshes/realsense_r200/: realsense.dae
msg/: BatteryData.msg  EncoderData.msg  GpsData.msg  ImuData.msg  OrientationSensorData.msg  SensorData3D.msg  TerraBattery.msg  TerraGps.msg  TerraImu.msg  Terra_Orientation_Data.msg  Terra_XYZ_Data.msg
plugins/: terra_encoder.cpp  terra_ros_gps_with_dropout.cpp  terra_ros_imu.cpp  terra_sim_battery.cpp  terra_skid_steering_with_encoder.cpp
plugins/gps/: gazebo_ros_gps_with_dropout.cpp
plugins/misc/: gazebo_ros_battery_simple.cpp
plugins/motion/: gazebo_encoder.cpp  skid_steering_with_encoder.cpp
plugins/realsense_gazebo_plugin/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
plugins/vision/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
scripts/: laser2pc.py
src/gps/: gazebo_ros_gps_mod_hec.cpp  gazebo_ros_gps_with_dropout.cpp
src/misc/: gazebo_ros_battery_simple.cpp
src/motion/: gazebo_encoder.cpp  gazebo_ros_imu_mod.cpp  gazebo_ros_imu_mod_hec.cpp  skid_steering_with_encoder.cpp
src/vision/: gazebo_ros_realsense.cpp
urdf/: all_sensors.urdf.xacro
urdf/cameras/: camera_sensors.urdf.xacro
urdf/cameras/rgb/: axis_m5013.urdf.xacro  axis_p5512.urdf.xacro  elp_usb_camera.urdf.xacro  ueye_cp_gige.urdf.xacro
urdf/cameras/rgbd/: asus_xtion_pro.urdf.xacro  fotonic_e.urdf.xacro  kinect.urdf.xacro  kinectv2.urdf.xacro  orbbec_astra.urdf.xacro  realsense_d415.urdf.xacro  realsense_r200.urdf.xacro
urdf/devices/: apm_plugin.urdf.xacro  devices.urdf.xacro
urdf/gps/: gps-with-periodicnoisebox.urdf.xacro  gps.urdf.xacro  gps_quad.urdf.xacro  gps_sensors.urdf.xacro  gps_standard.urdf.xacro  gps_with_dropout.urdf.xacro  gps_with_mast.urdf.xacro
urdf/includes/: materials.urdf.xacro
urdf/lidars/: hdl_32e.urdf.xacro  hokuyo3d.urdf.xacro  hokuyo_urg04lx.urdf.xacro  hokuyo_ust10lx.urdf.xacro  hokuyo_utm30lx.urdf.xacro  lidar_sensors.urdf.xacro  rplidar.urdf.xacro  sick_s300.urdf.xacro  sick_s3000.urdf.xacro  sick_tim571.urdf.xacro  vlp_16.urdf.xacro
urdf/misc/: approximate_battery.urdf.xacro  misc_sensors.urdf.xacro  sonar.urdf.xacro
urdf/motion/: encoder.urdf.xacro  imu.urdf.xacro  imu_hector.urdf.xacro  imu_hector_plugin.urdf.xacro  imu_mod.urdf.xacro  imu_quad.urdf.xacro  imu_quad_plugin.urdf.xacro  imu_standard.urdf.xacro  imu_terra_plugin.urdf.xacro  motion_sensors.urdf.xacro  rotary_encoder.urdf.xacro
