<?xml version="1.0"?>
<package>
     <name>gazebo_sensor_collection</name>
     <version>0.0.0</version>
     <maintainer email="huntery.lw.young@gmail.com">Hunter Young</maintainer>

     <description>
          A ROS Package containing a collection of Gazebo sensor URDF models
          that can easily be re-configured and attached to any simulated model.
     </description>


     <license>MIT</license>
     <license>BSD</license>

     <buildtool_depend>catkin</buildtool_depend>

     <!-- Use build_depend for packages you need at compile time: -->
     <build_depend>roslaunch</build_depend>
     <build_depend>roscpp</build_depend>
     <build_depend>rospy</build_depend>
     <build_depend>sensor_msgs</build_depend>
     <build_depend>geometry_msgs</build_depend>
     <build_depend>std_msgs</build_depend>
     <build_depend>std_srvs</build_depend>
     <build_depend>visualization_msgs</build_depend>
     <build_depend>nav_msgs</build_depend>
     <build_depend>libgazebo7-dev</build_depend>
     <build_depend>gazebo_plugins</build_depend>
     <build_depend>gazebo_dev</build_depend>
     <build_depend>gazebo_msgs</build_depend>
     <build_depend>gazebo_ros</build_depend>
     <build_depend>hector_gazebo_plugins</build_depend>
     <build_depend>tf</build_depend>
     <build_depend>dynamic_reconfigure</build_depend>
     <build_depend>urdf</build_depend>
     <build_depend>xacro</build_depend>
     <build_depend>cv_bridge</build_depend>
     <build_depend>image_transport</build_depend>
     <build_depend>message_filters</build_depend>
     <build_depend>message_generation</build_depend>
     <build_depend>message_runtime</build_depend>
     <build_depend>genmsg</build_depend>
     <build_depend>camera_info_manager</build_depend>

     <!-- Use run_depend for packages you need at runtime: -->
     <run_depend>roscpp</run_depend>
     <run_depend>rospy</run_depend>
     <run_depend>sensor_msgs</run_depend>
     <run_depend>geometry_msgs</run_depend>
     <run_depend>visualization_msgs</run_depend>
     <run_depend>std_msgs</run_depend>
     <run_depend>std_srvs</run_depend>
     <run_depend>nav_msgs</run_depend>
     <run_depend>gazebo7</run_depend>
     <run_depend>gazebo_ros</run_depend>
     <run_depend>gazebo_plugins</run_depend>
     <run_depend>gazebo_dev</run_depend>
     <run_depend>gazebo_msgs</run_depend>
     <run_depend>hector_gazebo_plugins</run_depend>
     <run_depend>tf</run_depend>
     <run_depend>message_runtime</run_depend>
     <run_depend>message_generation</run_depend>
     <run_depend>dynamic_reconfigure</run_depend>
     <run_depend>robot_state_publisher</run_depend>
     <run_depend>rviz</run_depend>
     <run_depend>joint_state_publisher</run_depend>
     <run_depend>urdf</run_depend>
     <run_depend>xacro</run_depend>
     <run_depend>cv_bridge</run_depend>
     <run_depend>image_transport</run_depend>
     <run_depend>message_filters</run_depend>
     <run_depend>camera_info_manager</run_depend>
     <run_depend>genmsg</run_depend>

     <!-- The export tag contains other, unspecified, tags -->
     <export>
          <!-- <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" /> -->
     </export>
</package>
