<?xml version="1.0"?>
<package format="3">
     <name>gazebo_sensor_collection</name>
     <version>0.0.0</version>
     <maintainer email="huntery.lw.young@gmail.com">Hunter Young</maintainer>

     <description>
          A ROS Package containing a collection of Gazebo sensor URDF models
          that can easily be re-configured and attached to any simulated model.
     </description>

     <license>MIT</license>
     <license>BSD</license>

     <buildtool_depend>ament_cmake</buildtool_depend>
     <buildtool_depend>rosidl_default_generators</buildtool_depend>

     <depend>builtin_interfaces</depend>
     <depend>rcl</depend>
     <depend>rmw</depend>
     <depend>cv_bridge</depend>
     <depend>std_srvs</depend>
     <depend>std_msgs</depend>
     <depend>nav_msgs</depend>
     <depend>sensor_msgs</depend>
     <depend>geometry_msgs</depend>
     <depend>image_transport</depend>
     <depend>tf2_ros</depend>
     <depend>tf2_geometry_msgs</depend>
     <depend>trajectory_msgs</depend>
     <depend>visualization_msgs</depend>
     <depend>camera_info_manager</depend>
     <depend>gazebo</depend>

     <!-- Use build_depend for packages you need at compile time: -->
     <build_depend>rclpy</build_depend>
     <build_depend>rclcpp</build_depend>
     <!-- SECTION: Hector-based Plugin Building -->
     <build_depend>gazebo_dev</build_depend>
     <!-- <build_depend>std_msgs</build_depend> -->
     <!-- <build_depend>std_srvs</build_depend> -->
     <!-- <build_depend>nav_msgs</build_depend> -->
     <!-- <build_depend>geometry_msgs</build_depend> -->
     <build_depend>geographic_msgs</build_depend>
     <build_depend>tf2</build_depend>
     <!-- <build_depend>tf2_ros</build_depend> -->
     <build_depend>rcl_interfaces</build_depend>
     <!-- <build_depend>builtin_interfaces</build_depend> -->
     <!-- SECTION: Hector-based Plugin Building -->
     <!-- <build_depend>gazebo_msgs</build_depend> -->
     <!-- <build_depend>gazebo_ros</build_depend> -->
     <!-- <build_depend>tf</build_depend> -->
     <build_depend>urdf</build_depend>
     <build_depend>xacro</build_depend>


     <exec_depend>rclpy</exec_depend>
     <exec_depend>rclcpp</exec_depend>
     <!-- SECTION: Hector-based Plugin Building -->
     <!-- <exec_depend>gazebo</exec_depend> -->
     <exec_depend>gazebo_ros</exec_depend>
     <exec_depend>geographic_msgs</exec_depend>
     <!-- <exec_depend>std_msgs</exec_depend> -->
     <!-- <exec_depend>std_srvs</exec_depend> -->
     <!-- <exec_depend>geometry_msgs</exec_depend> -->
     <!-- <exec_depend>nav_msgs</exec_depend> -->
     <exec_depend>tf2</exec_depend>
     <!-- <exec_depend>tf2_ros</exec_depend> -->
     <exec_depend>rcl_interfaces</exec_depend>
     <!-- <exec_depend>builtin_interfaces</exec_depend> -->
     <!-- SECTION: Hector-based Plugin Building -->

     <!-- <exec_depend>gazebo_dev</exec_depend> -->
     <!-- <exec_depend>gazebo_msgs</exec_depend> -->
     <!-- <exec_depend>gazebo_plugins</exec_depend> -->
     <!-- <exec_depend>tf</exec_depend> -->
     <exec_depend>urdf</exec_depend>
     <exec_depend>xacro</exec_depend>
     <!-- <exec_depend>hector_gazebo_plugins</exec_depend> -->
     <!-- <exec_depend>rviz</exec_depend>
     <exec_depend>robot_state_publisher</exec_depend>
     <exec_depend>joint_state_publisher</exec_depend> -->
     <exec_depend>rosidl_default_runtime</exec_depend>


     <member_of_group>rosidl_interface_packages</member_of_group>

     <!-- The export tag contains other, unspecified, tags -->
     <export>
         <build_type>ament_cmake</build_type>
         <!-- <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" /> -->
         <!-- <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" /> -->
     </export>
</package>
